[add]Ramirez angel ajuste de carga de NC  y vista de gastos de viaje

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -1,24 +1,20 @@
 <div class="row">
   <div class="col-12">
+
     <form [formGroup]="formulario_header">
       <div class="row">
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-          <label for="usuario">Usuario</label>
+          <label for="usuario">Nombre del Usuario</label>
           <input formControlName="usuario" type="text" [value]="comprobacion.nombre_usuario" class="form-control"
             id="usuario">
         </div>
+
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-          <label for="folio_comprobacion">Folio de Comprobación</label>
-          <input type="text" formControlName="folio_comprobacion" [value]="comprobacion.folio_comrpobacion"
-            class="form-control" id="folio_comprobacion">
+          <label for="compania">Compañía <span class="requerido">*</span></label>
+          <input type="text" formControlName="compania" [value]="comprobacion.compania" class="form-control"
+            id="compania">
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-          <label for="contribuyente">Contribuyente <span class="requerido">*</span> </label>
-          <select2 [data]="lista_constribuyentes" [value]="startValue_contribuyente"
-            [options]="{placeholder: 'Seleccione una Empresa'}" (valueChanged)="onContribuyenteSelected($event)"
-            name="contribuyente" id="contribuyente">
-          </select2>
-        </div>
+
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
           <label for="cnetro_costos">Centro de Costos <span class="requerido">*</span> </label>
           <select2 [data]="lista_centros_costo" [value]="startValue_centros_costo"
@@ -26,11 +22,31 @@
             name="cnetro_costos" id="cnetro_costos">
           </select2>
         </div>
+
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-          <label for="tipo_gasto">Tipo de Gasto</label>
-          <input type="text" formControlName="tipo_gasto" [value]="comprobacion.tipo_gastos" class="form-control"
-            id="tipo_gasto">
+          <label for="tipo_gasto">Tipo de Gasto <span class="requerido">*</span> </label>
+          <select2 [data]="lista_centros_costo" [value]="startValue_centros_costo"
+            [options]="{placeholder: 'Seleccione un Tipo de Gastos'}" (valueChanged)="onCECOSelected($event)"
+            name="cnetro_costos" id="cnetro_costos">
+          </select2>
         </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="aprobador">Aprobador<span class="requerido">*</span></label>
+          <input type="text" formControlName="aprobador" [value]="comprobacion.aprobador" class="form-control"
+            id="aprobador">
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="moneda">Moneda <span class="requerido">*</span> </label>
+          <select2>
+          </select2>
+          <!-- <select2 [data]="lista_constribuyentes" [value]="startValue_contribuyente"
+            [options]="{placeholder: 'Seleccione una moneda'}" (valueChanged)="onContribuyenteSelected($event)"
+            name="moneda" id="moneda">
+          </select2> -->
+        </div>
+
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
           <div class="form-group">
             <label for="monto_reembolsar">Monto a Reembolsar</label>
@@ -39,6 +55,20 @@
               placeholder="">
           </div>
         </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <label for="destino">Destino<span class="requerido">*</span></label>
+          <input type="text" formControlName="destino" [value]="comprobacion.destino" class="form-control" id="destino">
+        </div>
+
+        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
+          <div class="form-group">
+            <label for="descripcion_motivo">Motivo <span class="requerido">*</span></label>
+            <textarea class="form-control" formControlName="motivo" id="descripcion_motivo" rows="3"
+              [(ngModel)]="comprobacion.motivo"></textarea>
+          </div>
+        </div>
+
         <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
           <div class="form-group">
             <label for="recuperable">Recuperable</label>
@@ -46,70 +76,67 @@
               [(ngModel)]="comprobacion.recuperable" placeholder="">
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 mt-2">
-          <div class="form-group">
-            <label for="descripcion_motivo">Motivo</label>
-            <textarea class="form-control" formControlName="motivo" id="descripcion_motivo" rows="3"
-              [(ngModel)]="comprobacion.motivo"></textarea>
-          </div>
-        </div>
+
       </div>
     </form>
+
     <div class="row">
       <div class="col-12">
         <button class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-lg"> Agregar Comprobante
         </button>
       </div>
     </div>
+
     <div class="row">
       <div class="col-12">
-        <div>
-          <div class="row">
-            <div class="panel-body table-responsive">
-              <table id="tabla_departamentos_rci"
-                class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
-                <caption></caption>
-                <thead>
-                  <tr>
-                    <th scope="">#</th>
-                    <th scope="">Estatus</th>
-                    <th scope="">Fecha</th>
-                    <th scope="">Forma de Pago</th>
-                    <th scope="">Razon Social</th>
-                    <th scope="">Concepto</th>
-                    <th scope="">Moneda del Comprobante</th>
-                    <th scope="">Importe a Reembolsar</th>
-                    <th scope="">Documentos</th>
-                    <th scope="">Acciones</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr class="gradeU" *ngFor="let comprobante of lista_comprobantes; let i = index">
-                    <td>{{i + 1}}</td>
-                    <td>{{comprobante.emisor.nombre}}</td>
-                    <td>{{comprobante.complemento.timbreFiscalDigital.uuid}}</td>
-                    <td>{{comprobante.fecha}}</td>
-                    <td>{{comprobante.metodoPago}}</td>
-                    <td>{{comprobante.formaPago}}</td>
-                    <td>{{comprobante.moneda}}</td>
-                    <td>{{comprobante.total | currency}}</td>
-                    <td>
-                      <button><em class="fas fa-file-pdf"></em></button>
-                      <button><em class="fas fa-file-archive"></em></button>
-                      <button><em class="fas fa-folder"></em></button>
-                    </td>
-                    <td>
-                      <button (click)="eliminarConcepto(i)"><em class="fas fa-trash"></em></button>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-
+        <div class="panel panel-inverse">
+          <div class="panel-heading">
+            <h4 class="panel-title">Lista - Gastos</h4>
+          </div>
+          <div class="panel-body table-responsive">
+            <table id="tabla_gastos_viaje_rci"
+              class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
+              <caption></caption>
+              <thead>
+                <tr>
+                  <th scope="">#</th>
+                  <th scope="">Estatus</th>
+                  <th scope="">Fecha</th>
+                  <th scope="">Forma de Pago</th>
+                  <th scope="">Razon Social</th>
+                  <th scope="">Concepto</th>
+                  <th scope="">Moneda del Comprobante</th>
+                  <th scope="">Importe a Reembolsar</th>
+                  <th scope="">Documentos</th>
+                  <th scope="">Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr class="gradeU" *ngFor="let comprobante of lista_comprobantes; let i = index">
+                  <td>{{i + 1}}</td>
+                  <td>{{comprobante.emisor.nombre}}</td>
+                  <td>{{comprobante.complemento.timbreFiscalDigital.uuid}}</td>
+                  <td>{{comprobante.fecha}}</td>
+                  <td>{{comprobante.metodoPago}}</td>
+                  <td>{{comprobante.formaPago}}</td>
+                  <td>{{comprobante.moneda}}</td>
+                  <td>{{comprobante.total | currency}}</td>
+                  <td>
+                    <button><em class="fas fa-file-pdf"></em></button>
+                    <button><em class="fas fa-file-archive"></em></button>
+                    <button><em class="fas fa-folder"></em></button>
+                  </td>
+                  <td>
+                    <button (click)="eliminarConcepto(i)"><em class="fas fa-trash"></em></button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
     </div>
+
   </div>
 </div>
 
