--- a/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
+++ b/src/app/modulos/notas-credito/notas-credito/notas-credito.component.html
@@ -24,22 +24,22 @@
             (valueChanged)="onSucursalSeleccionado($event)" name="sucursal" id="sucursal">
           </select2>
         </div>
-        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <!-- <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <label for="unidad_responsable">Correo Electrónico <span class="requerido">*</span> </label>
           <input type="email" class="form-control" formControlName="correo" id="unidad_responsable" maxlength="50">
-        </div>
-        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        </div> -->
+        <!--  <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <label for="fecha_recepcion">Fecha Recepción <span class="requerido">*</span> </label>
           <my-date-picker #fecha_recepcion name="fecha_recepcion" id="fecha_recepcion"
             [options]="disabledDataPcickerOptions" (dateChanged)="onFechaRecepcionSelected($event, 'fecha_recepcion')">
           </my-date-picker>
-        </div>
-        <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        </div> -->
+        <!-- <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
           <label for="fecha_pago">Fecha de Pago <span class="requerido">*</span> </label>
           <my-date-picker name="fecha_pago" id="fecha_pago" placeholder="" [options]="globals.myDatePickerOptions"
             (dateChanged)="onFechaRecepcionSelected($event, 'fecha_pago')" required>
           </my-date-picker>
-        </div>
+        </div> -->
 
         <ng-container *ngIf="!documento_papel">
           <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
@@ -57,7 +57,7 @@
         </ng-container>
 
         <div class="form-group col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-          <label>PDF <span class="requerido">*</span> </label>
+          <label>PDF </label>
           <div class="input-group input-file" name="xml_nc">
             <span class="input-group-btn">
               <label class="btn btn-block btn-primary">Archivo
@@ -75,10 +75,11 @@
           <label for="nota_credito" style="width: auto; margin-left: -15px;"> XML / Papel </label>
         </div>
       </form>
-      <div *ngIf="!documento_papel" class="form-row">
-        <button [disabled]="!formulario_header.valid" class="btn btn-primary ml-auto" (click)="cargarDocumento()">
-          Cargar </button>
-      </div>
+    </div>
+    <div *ngIf="!documento_papel" class="form-row">
+      <button [disabled]="!formulario_header.valid" class="btn btn-primary ml-auto" style="margin-right: 10px;"
+        (click)="cargarDocumento()">
+        Cargar </button>
     </div>
   </div>
 </div>
