--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-2" style="padding-bottom: 2em;">
     <a id="agregarDepartamento" routerLink="/home/comprobaciones/gastos_viaje/add" class="btn btn-primary"
-      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Nueva Comprobación Gastos viaje </a>
+      *ngIf="globals.menuDinamico.gastos_comprobacion_prestacion_add"> Reembolso Gastos viaje </a>
   </div>
 </div>
 
