--- a/src/app/modulos/listar-cfdi/listar-cfdi-mx/listar-cfdi-mx.component.html
+++ b/src/app/modulos/listar-cfdi/listar-cfdi-mx/listar-cfdi-mx.component.html
@@ -31,3 +31,4 @@
 
 <app-modal-detalles-aprobacion *ngIf="lista_detalle_aprobacion" [detalleAprobacion]="lista_detalle_aprobacion">
 </app-modal-detalles-aprobacion>
+<app-visor-factura [CFDI]="detalles_factura"></app-visor-factura>
