--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -74,6 +74,9 @@
                       class="far fa-file-pdf"></i> </a>
                   <a *ngIf="item.xml !== '' " target="_blank" [href]="item.xml" class="btn ml-2"> <i
                       class="far fa-file-code"></i> </a>
+                  <button *ngIf="item.xml && item.xml != ''" class="btn ml-2"
+                    (click)="mostrarInterprete($event.target, item.folio_fiscal)"><i
+                      class="fas fa-eye mr-1"></i></button>
                   <button class="btn ml-2" (click)="mostrarModal(item.documento_id, item.folio_fiscal)"><i
                       class="fas fa-file mr-1"></i>Actualizar PDF </button>
                 </div>
@@ -119,3 +122,4 @@
 
 <!-- <app-modal-detalles-amortizacion [data]="detalles" [detalleAprobacion]="lista_detalle_aprobacion">
 </app-modal-detalles-amortizacion> -->
+<app-visor-factura [CFDI]="detalles_factura"></app-visor-factura>
